--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<h1>Site is live!</h1>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -859,4 +860,5 @@
         });
     </script>
 </body>
+
 </html>
