Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
             <nav class="navbar">
                 <a href="#" class="logo">
                     <i class="fas fa-rocket"></i>
-                    Apollo Technologies
+                    Apollo Technologies US
                 </a>
                 <ul class="nav-links">
                     <li><a href="#home">Home</a></li>
@@ -862,3 +862,4 @@
 </body>
 
 </html>
+
