--- a/index.html
+++ b/index.html
@@ -967,6 +967,7 @@
                     <div class="contact-details">
                         <div class="contact-label">Office Address</div>
                         <div class="contact-value">7511 Main Street, Suite 200</div>
+                        <div class="contact-value">Frisco, TX 75034</div>
                     </div>
                 </div>
             </div>
@@ -977,6 +978,7 @@
                 </div>
                 <div class="map-title">Our Location</div>
                 <div class="map-address">7511 Main Street, Suite 200</div>
+                <div class="contact-value">Frisco, TX 75034</div>
             </div>
         </div>
     </div>
@@ -1019,14 +1021,14 @@
                 <div class="footer-column">
                     <h3>Contact Us</h3>
                     <ul>
-                        <li><i class="fas fa-map-marker-alt"></i> 123 Tech Avenue, Silicon Valley, CA</li>
-                        <li><i class="fas fa-phone"></i> +1 (555) 123-4567</li>
+                        <li><i class="fas fa-map-marker-alt"></i> 7511 Main Street, Suite 200, Frisco, TX 75034</li>
+                        <li><i class="fas fa-phone"></i> +1 (469) 554-9909</li>
                         <li><i class="fas fa-envelope"></i> info@apollotechnologiesus.com</li>
                     </ul>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2023 Apollo Technologies. All rights reserved.</p>
+                <p>&copy; 2025 Apollo Technologies. All rights reserved.</p>
             </div>
         </div>
     </footer>
@@ -1078,6 +1080,7 @@
 </body>
 
 </html>
+
 
 
 
