Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -1023,7 +1023,7 @@
                     <ul>
                         <li><i class="fas fa-map-marker-alt"></i> 7511 Main Street, Suite 200, Frisco, TX 75034</li>
                         <li><i class="fas fa-phone"></i> +1 (469) 554-9909</li>
-                        <li><i class="fas fa-envelope"></i> info@apollotechnologiesus.com</li>
+                        <li><i class="fas fa-envelope"></i> Robinpandey@apollotechnologiesus.com</li>
                     </ul>
                 </div>
             </div>
@@ -1080,6 +1080,7 @@
 </body>
 
 </html>
+
 
 
 
