--- a/index.html
+++ b/index.html
@@ -637,6 +637,7 @@
 </head>
 <body>
     <!-- Header -->
+        <!-- Header -->
     <header>
         <div class="container">
             <nav class="navbar">
@@ -650,11 +651,9 @@
                     <li><a href="#services">Services</a></li>
                     <li><a href="#about">About Us</a></li>
                     <li><a href="#contact">Contact</a></li>
-                    <li><a href="/for-saas">For SaaS</a></li>
-                    <li><a href="/for-professional-services">For Service Firms</a></li>
                 </ul>
                 <div class="nav-actions">
-                    <a href="#contact" class="btn btn-primary">Get Started</a>
+                    <a href="https://calendly.com/revanaglobal/30min" target="_blank" class="btn btn-primary">Book a Call</a>
                 </div>
                 <div class="mobile-menu">
                     <i class="fas fa-bars"></i>
@@ -662,7 +661,7 @@
             </nav>
         </div>
     </header>
-
+    
     <!-- Hero Section -->
     <section class="hero" id="home">
         <div class="container">
@@ -901,4 +900,5 @@
         });
     </script>
 </body>
+
 </html>
