--- a/index.html
+++ b/index.html
@@ -648,8 +648,8 @@
     <header>
         <div class="container">
             <nav class="navbar">
-                <a href="#" class="logo">
-                    <i class="fas fa-rocket"></i>
+              <a href="#" class="logo">
+    <img src="images/logo.png" alt="Apollo Technologies US" class="logo-img">
                     Apollo Technologies US
                 </a>
                 <ul class="nav-links">
@@ -909,3 +909,4 @@
 </body>
 
 </html>
+
