--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
         <div class="container">
             <nav class="navbar">
               <a href="#" class="logo">
-    <img src="images/logo.png" alt="Apollo Technologies US" class="logo-img">
+    <img src="logo.png" alt="Apollo Technologies US" class="logo-img">
                 </a>
                 <ul class="nav-links">
                     <li><a href="#home">Home</a></li>
@@ -908,5 +908,6 @@
 </body>
 
 </html>
+
 
 
