--- a/index.html
+++ b/index.html
@@ -649,7 +649,8 @@
         <div class="container">
             <nav class="navbar">
               <a href="#" class="logo">
-    <img src="logo.png" alt="Apollo Technologies US" class="logo-img">
+       <img src="logo.png" alt="Apollo Technologies US" class="logo-img">
+    Apollo Technologies US 
                 </a>
                 <ul class="nav-links">
                     <li><a href="#home">Home</a></li>
@@ -908,6 +909,7 @@
 </body>
 
 </html>
+
 
 
 
