--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
-        /* ALL YOUR EXISTING CSS CODE STAYS HERE - DON'T DELETE THIS */
+            body {
+            background-color: red !important; /* Temporary to test */
+        }
+        
+        /* YOUR EXISTING CSS STARTS HERE - DON'T DELETE ANYTHING BELOW */
+        :root {
+            --primary: #2563eb;
         /* CSS Variables */
         :root {
             --primary: #2563eb;
@@ -909,6 +915,7 @@
 </body>
 
 </html>
+
 
 
 
