--- a/index.html
+++ b/index.html
@@ -150,6 +150,23 @@
             align-items: center;
         }
 
+        /* ADD LOGO STYLES RIGHT HERE */
+        .logo-img {
+            height: 35px; /* Adjust this value to make it smaller/bigger */
+            width: auto;
+            margin-right: 12px;
+        }
+
+        /* Hide the rocket icon since we're using an image */
+        .logo i {
+            display: none;
+        }
+        /* END OF LOGO STYLES */
+
+        .nav-links {
+            display: flex;
+            gap: 30px;
+        }
         .logo i {
             margin-right: 10px;
             font-size: 2rem;
@@ -915,6 +932,7 @@
 </body>
 
 </html>
+
 
 
 
