--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Agency for SaaS & Professional Services | Apollo Technologies</title>
+    <title>About Us | Apollo Technologies</title>
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
     <link rel="icon" type="image/svg+xml" href="/favicon.svg">
     <link rel="shortcut icon" href="/favicon.ico">
@@ -11,6 +11,7 @@
     <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
+        /* SAME CSS */
         :root {
             --primary: #2563eb;
             --primary-dark: #1d4ed8;
@@ -144,38 +145,37 @@
             font-size: 1.5rem;
             cursor: pointer;
         }
-        .hero {
-            background: linear-gradient(135deg, #1e3a8a 0%, #3b82f6 100%);
-            color: white;
-            padding: 160px 0 100px;
-            position: relative;
+        .about {
+            background-color: white;
+        }
+        .about-content {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 50px;
+            align-items: center;
+        }
+        .about-text h2 {
+            font-size: 2.5rem;
+            margin-bottom: 20px;
+            color: var(--dark);
+        }
+        .about-text p {
+            margin-bottom: 20px;
+            color: var(--gray);
+        }
+        .about-image {
+            border-radius: 10px;
             overflow: hidden;
+            box-shadow: var(--shadow-lg);
         }
-        .hero-content {
-            max-width: 800px;
-            margin: 0 auto;
-            text-align: center;
-            position: relative;
-            z-index: 1;
+        .about-image img {
+            width: 100%;
+            height: auto;
+            display: block;
+            transition: var(--transition);
         }
-        .hero-title {
-            font-size: 3rem;
-            margin-bottom: 1.5rem;
-            line-height: 1.2;
-        }
-        .hero-subtitle {
-            font-size: 1.3rem;
-            margin-bottom: 2.5rem;
-            opacity: 0.9;
-            max-width: 700px;
-            margin-left: auto;
-            margin-right: auto;
-        }
-        .hero-actions {
-            display: flex;
-            gap: 20px;
-            justify-content: center;
-            flex-wrap: wrap;
+        .about-image:hover img {
+            transform: scale(1.05);
         }
         footer {
             background-color: var(--dark);
@@ -251,28 +251,17 @@
         .chat-button i { font-size: 1.2rem; }
         .chat-text { font-size: 1rem; }
         @media (max-width: 992px) {
-            .hero-title { font-size: 2.8rem; }
+            .about-content { grid-template-columns: 1fr; }
+            .about-image { order: -1; }
         }
         @media (max-width: 768px) {
             .nav-links, .nav-actions { display: none; }
             .mobile-menu { display: block; }
-            .hero-title { font-size: 2.2rem; }
-            .hero-subtitle { font-size: 1.1rem; }
             .section-title { font-size: 2rem; }
             .chat-button-container { bottom: 20px; right: 20px; }
             .chat-button { padding: 12px 16px; }
             .chat-text { display: none; }
             .chat-button i { font-size: 1.4rem; margin: 0; }
-        }
-        @media (max-width: 576px) {
-            .hero-actions {
-                flex-direction: column;
-                align-items: center;
-            }
-            .btn {
-                width: 100%;
-                max-width: 250px;
-            }
         }
     </style>
 </head>
@@ -301,14 +290,18 @@
         </div>
     </header>
 
-    <section class="hero">
+    <section class="section about">
         <div class="container">
-            <div class="hero-content">
-                <h1 class="hero-title">AI That Works for Your Business</h1>
-                <p class="hero-subtitle">We help <strong>B2B SaaS companies</strong> and <strong>professional service firms</strong> embed intelligent AI agents that drive user success, reduce admin work, and accelerate growth.</p>
-                <div class="hero-actions">
-                    <a href="solutions.html" class="btn btn-primary">Explore Solutions</a>
-                    <a href="contact.html" class="btn btn-secondary">Book a Call</a>
+            <div class="about-content">
+                <div class="about-text">
+                    <h2>About Apollo Technologies US</h2>
+                    <p>We specialize in crafting intelligent AI agents that revolutionize how B2B SaaS companies and professional service firms operate.</p>
+                    <p>Founded in 2023, our team brings decades of experience in AI, SaaS product development, and professional services automation.</p>
+                    <p>Our mission: Make AI work for your business — not just as a chatbot, but as a true growth partner.</p>
+                    <a href="contact.html" class="btn btn-primary">Let's Converse</a>
+                </div>
+                <div class="about-image">
+                    <img src="https://images.unsplash.com/photo-1677442136019-21780ecad995?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="AI Technology">
                 </div>
             </div>
         </div>
@@ -319,7 +312,7 @@
             <div class="footer-content">
                 <div class="footer-column">
                     <h3>Apollo Technologies US</h3>
-                    <p>Your partner for AI-driven transformation. We help B2B SaaS companies and professional service firms embed intelligent AI agents.</p>
+                    <p>Your partner for AI-driven transformation.</p>
                     <div class="social-links">
                         <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
                         <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
