--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                     <ul>
                         <li><i class="fas fa-envelope"></i> Robinpandey@apollotechnologiesus.com</li>
                         <li><i class="fas fa-phone"></i> 469 554 9909</li>
-                        <li><i class="fas fa-map-marker-alt"></i> 7511 Main Street, Suite 200</li>
+                        <li><i class="fas fa-map-marker-alt"></i> 7511 Main Street, Suite 200<br>Frisco, TX 75034</li>
                     </ul>
                 </div>
             </div>
@@ -375,4 +375,5 @@
         });
     </script>
 </body>
+
 </html>
