--- a/contact.html
+++ b/contact.html
@@ -370,7 +370,7 @@
                         </div>
                         <div class="contact-item">
                             <div class="contact-icon"><i class="fas fa-map-marker-alt"></i></div>
-                            <div><p>7511 Main Street, Suite 200</p></div>
+                           <div><p>7511 Main Street, Suite 200<br>Frisco, TX 75034</p></div>
                         </div>
                     </div>
                 </div>
@@ -455,4 +455,5 @@
         });
     </script>
 </body>
+
 </html>
