--- a/index.html
+++ b/index.html
@@ -280,6 +280,43 @@
                 max-width: 250px;
             }
         }
+        /* Mobile menu styles */
+.nav-links {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background-color: white;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 20px;
+    box-shadow: var(--shadow-lg);
+    z-index: 999;
+    display: none; /* hidden by default */
+}
+
+.nav-links.show {
+    display: flex;
+}
+
+.nav-links li {
+    width: 100%;
+    margin: 10px 0;
+}
+
+.nav-links a {
+    color: var(--dark);
+    font-size: 1.1rem;
+    font-weight: 600;
+}
+
+.nav-links a:hover {
+    color: var(--primary);
+}
+
+.nav-links a::after {
+    display: none; /* hide underline on mobile */
+}
     </style>
 </head>
 <body>
@@ -383,4 +420,5 @@
 </body>
 
 </html>
+
 
